fix(YALB-1563): update menu alignment (with logo) to be centered when focus

--- a/components/03-organisms/site-header/_yds-site-header.scss
+++ b/components/03-organisms/site-header/_yds-site-header.scss
@@ -378,8 +378,7 @@ $background-image-max-width: 100rem;
       margin-left: auto;
     }
 
-    [data-site-header-nav-position='right'][data-site-header-site-name-is-image]
-      & {
+    [data-site-header-type='focus'] & {
       align-self: center;
     }
   }
